{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 2162,
  "lineage": "295e532a-fef1-ace1-a0eb-ede99091ec90",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "PRD-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:security-group/sg-0a6e89d0daabe4bcc",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6e89d0daabe4bcc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "992382512430",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "PRD-EIP-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f2391063cf68931",
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:elastic-ip/eipalloc-09f2391063cf68931",
            "association_id": "eipassoc-0a50e6f42d1e00625",
            "domain": "vpc",
            "id": "eipalloc-09f2391063cf68931",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0807b0e257c789cf3",
            "private_dns": "ip-10-250-1-161.ap-northeast-2.compute.internal",
            "private_ip": "10.250.1.161",
            "public_dns": "ec2-3-39-206-54.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.206.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "PRD-EIP-01"
            },
            "tags_all": {
              "Name": "PRD-EIP-01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PRD-PRI-EC2-EFS-MANAGED-SERVER-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:instance/i-095b4ff23a5992c42",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095b4ff23a5992c42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cba0456b3b8ebb5c",
            "private_dns": "ip-10-250-4-200.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.4.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "PRD-PRI-EC2-EFS-MANAGED-SERVER-2A"
                },
                "tags_all": {
                  "Name": "PRD-PRI-EC2-EFS-MANAGED-SERVER-2A"
                },
                "throughput": 0,
                "volume_id": "vol-06a4e40f5407640ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d495dcf1b1bb204",
            "tags": {
              "Name": "PRD-PRI-EC2-EFS-MANAGED-SERVER-2A"
            },
            "tags_all": {
              "Name": "PRD-PRI-EC2-EFS-MANAGED-SERVER-2A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0073f9536bcc1317b"
            ]
          },
          "dependencies": [
            "aws_security_group.PRD-SG-EFS-MANAGED-SERVER",
            "aws_subnet.PRD-PRI-EFS-MANAGED-SERVER-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PRD-PRI-EC2-EKS-MANAGED-SERVER-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:instance/i-0bd9c63044fdbf1d8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd9c63044fdbf1d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0db298199ecf8cea7",
            "private_dns": "ip-10-250-3-200.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.3.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "PRD-PRI-EC2-EKS-MANAGED-SERVER-2A"
                },
                "tags_all": {
                  "Name": "PRD-PRI-EC2-EKS-MANAGED-SERVER-2A"
                },
                "throughput": 0,
                "volume_id": "vol-06b06d44cc9185d47",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-006b535e31d83a7f7",
            "tags": {
              "Name": "PRD-PRI-EC2-EKS-MANAGED-SERVER-2A"
            },
            "tags_all": {
              "Name": "PRD-PRI-EC2-EKS-MANAGED-SERVER-2A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d5fb0a61d9a999b7"
            ]
          },
          "dependencies": [
            "aws_security_group.PRD-SG-EKS-MANAGED-SERVER",
            "aws_subnet.PRD-PRI-EKS-MANAGED-SERVER-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PRD-PUB-EC2-BASTION-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:instance/i-0267a329619bc5999",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0267a329619bc5999",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d6f24a45dce74a8",
            "private_dns": "ip-10-250-1-200.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.1.200",
            "public_dns": "ec2-43-202-62-118.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.62.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "PRD-PUB-EC2-BASTION-2A"
                },
                "tags_all": {
                  "Name": "PRD-PUB-EC2-BASTION-2A"
                },
                "throughput": 0,
                "volume_id": "vol-029c5c6a40dcd7bc8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01413c72e7596ba53",
            "tags": {
              "Name": "PRD-PUB-EC2-BASTION-2A"
            },
            "tags_all": {
              "Name": "PRD-PUB-EC2-BASTION-2A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0372878446f7eb35f"
            ]
          },
          "dependencies": [
            "aws_security_group.PRD-SG-BASTION",
            "aws_subnet.PRD-PUB-BASTION-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PRD-PUB-EC2-BASTION-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056a29f2eddc40520",
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:instance/i-035e710b14a24d420",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035e710b14a24d420",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da51b1373ebe614f",
            "private_dns": "ip-10-250-2-200.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.2.200",
            "public_dns": "ec2-3-39-25-6.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.25.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "PRD-PUB-EC2-BASTION-2C"
                },
                "tags_all": {
                  "Name": "PRD-PUB-EC2-BASTION-2C"
                },
                "throughput": 0,
                "volume_id": "vol-0c441c14373886558",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0690cf354162ff714",
            "tags": {
              "Name": "PRD-PUB-EC2-BASTION-2C"
            },
            "tags_all": {
              "Name": "PRD-PUB-EC2-BASTION-2C"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0372878446f7eb35f"
            ]
          },
          "dependencies": [
            "aws_security_group.PRD-SG-BASTION",
            "aws_subnet.PRD-PUB-BASTION-2C",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "PRD-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:internet-gateway/igw-096ec5f1fc564bb58",
            "id": "igw-096ec5f1fc564bb58",
            "owner_id": "992382512430",
            "tags": {
              "Name": "PRD-IGW"
            },
            "tags_all": {
              "Name": "PRD-IGW"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "PRD-NGW-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f2391063cf68931",
            "association_id": "eipassoc-0a50e6f42d1e00625",
            "connectivity_type": "public",
            "id": "nat-0fc6c8b029185bfc1",
            "network_interface_id": "eni-0807b0e257c789cf3",
            "private_ip": "10.250.1.161",
            "public_ip": "3.39.206.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01413c72e7596ba53",
            "tags": {
              "Name": "PRD-NGW-01"
            },
            "tags_all": {
              "Name": "PRD-NGW-01"
            }
          },
          "dependencies": [
            "aws_eip.PRD-EIP-01",
            "aws_subnet.PRD-PUB-BASTION-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "PRD-RT-PRI-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c26fd108eacadc4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fc6c8b029185bfc1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c26fd108eacadc4c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.PRD-EIP-01",
            "aws_nat_gateway.PRD-NGW-01",
            "aws_route_table.PRD-RT-PRI-01",
            "aws_subnet.PRD-PUB-BASTION-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "PRD-RT-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-096ec5f1fc564bb58",
            "id": "r-rtb-0b1f321e6f05175da1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b1f321e6f05175da",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.PRD-IGW",
            "aws_route_table.PRD-RT-PUB",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRD-RT-PRI-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:route-table/rtb-0c26fd108eacadc4c",
            "id": "rtb-0c26fd108eacadc4c",
            "owner_id": "992382512430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc6c8b029185bfc1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRD-RT-PRI-01"
            },
            "tags_all": {
              "Name": "PRD-RT-PRI-01"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRD-RT-PRI-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:route-table/rtb-0367c5c1f9768d007",
            "id": "rtb-0367c5c1f9768d007",
            "owner_id": "992382512430",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PRD-RT-PRI-02"
            },
            "tags_all": {
              "Name": "PRD-RT-PRI-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PRD-RT-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:route-table/rtb-0b1f321e6f05175da",
            "id": "rtb-0b1f321e6f05175da",
            "owner_id": "992382512430",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096ec5f1fc564bb58",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRD-RT-PUB"
            },
            "tags_all": {
              "Name": "PRD-RT-PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRD-RT-ASSOCIATE-PRI-01-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b91e077d841a4627",
            "route_table_id": "rtb-0c26fd108eacadc4c",
            "subnet_id": "subnet-0f577252fceabbe46"
          },
          "dependencies": [
            "aws_route_table.PRD-RT-PRI-01",
            "aws_subnet.PRD-PRI-01-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRD-RT-ASSOCIATE-PRI-01-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef896ac947849c98",
            "route_table_id": "rtb-0367c5c1f9768d007",
            "subnet_id": "subnet-0e30d6646ad185373"
          },
          "dependencies": [
            "aws_route_table.PRD-RT-PRI-02",
            "aws_subnet.PRD-PRI-01-2C",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRD-RT-ASSOCIATE-PRI-02-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9ded4145c91c4a2",
            "route_table_id": "rtb-0c26fd108eacadc4c",
            "subnet_id": "subnet-00bce4f96b369aff1"
          },
          "dependencies": [
            "aws_route_table.PRD-RT-PRI-01",
            "aws_subnet.PRD-PRI-02-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRD-RT-ASSOCIATE-PRI-02-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009a0c2448854ec81",
            "route_table_id": "rtb-0367c5c1f9768d007",
            "subnet_id": "subnet-085fc0d634b9dfa1c"
          },
          "dependencies": [
            "aws_route_table.PRD-RT-PRI-02",
            "aws_subnet.PRD-PRI-02-2C",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRD-RT-ASSOCIATE-PRI-EFS-MANAGED-SERVER-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e184a67b83f616b4",
            "route_table_id": "rtb-0c26fd108eacadc4c",
            "subnet_id": "subnet-05d495dcf1b1bb204"
          },
          "dependencies": [
            "aws_route_table.PRD-RT-PRI-01",
            "aws_subnet.PRD-PRI-EFS-MANAGED-SERVER-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRD-RT-ASSOCIATE-PRI-EKS-MANAGED-SERVER-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036e57ac670383cfe",
            "route_table_id": "rtb-0c26fd108eacadc4c",
            "subnet_id": "subnet-006b535e31d83a7f7"
          },
          "dependencies": [
            "aws_route_table.PRD-RT-PRI-01",
            "aws_subnet.PRD-PRI-EKS-MANAGED-SERVER-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRD-RT-ASSOCIATE-PRI-EKS-MANAGED-SERVER-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c997676c227ee707",
            "route_table_id": "rtb-0367c5c1f9768d007",
            "subnet_id": "subnet-0ccfa065b8a85df1a"
          },
          "dependencies": [
            "aws_route_table.PRD-RT-PRI-02",
            "aws_subnet.PRD-PRI-EKS-MANAGED-SERVER-2C",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRD-RT-ASSOCIATE-PUB-BASTION-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d776d4a9fb351177",
            "route_table_id": "rtb-0b1f321e6f05175da",
            "subnet_id": "subnet-01413c72e7596ba53"
          },
          "dependencies": [
            "aws_route_table.PRD-RT-PUB",
            "aws_subnet.PRD-PUB-BASTION-2A",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PRD-RT-ASSOCIATE-PUB-BASTION-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f05137bc935b82",
            "route_table_id": "rtb-0b1f321e6f05175da",
            "subnet_id": "subnet-0690cf354162ff714"
          },
          "dependencies": [
            "aws_route_table.PRD-RT-PUB",
            "aws_subnet.PRD-PUB-BASTION-2C",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRD-SG-BASTION",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:security-group/sg-0372878446f7eb35f",
            "description": "for bastion Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0372878446f7eb35f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PRD-SG-BASTION",
            "name_prefix": "",
            "owner_id": "992382512430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PRD-SG-BASTION"
            },
            "tags_all": {
              "Name": "PRD-SG-BASTION"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRD-SG-EFS-MANAGED-SERVER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:security-group/sg-0073f9536bcc1317b",
            "description": "for efs-managed Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0073f9536bcc1317b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for efs",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PRD-SG-EFS-MANAGED-SERVER",
            "name_prefix": "",
            "owner_id": "992382512430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PRD-SG-EFS-MANAGED-SERVER"
            },
            "tags_all": {
              "Name": "PRD-SG-EFS-MANAGED-SERVER"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRD-SG-EKS-MANAGED-SERVER",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:security-group/sg-0d5fb0a61d9a999b7",
            "description": "for eks-managed Server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5fb0a61d9a999b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PRD-SG-EKS-MANAGED-SERVER",
            "name_prefix": "",
            "owner_id": "992382512430",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PRD-SG-EKS-MANAGED-SERVER"
            },
            "tags_all": {
              "Name": "PRD-SG-EKS-MANAGED-SERVER"
            },
            "timeouts": null,
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRD-SG-RDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:security-group/sg-0d343aa17b28a6c77",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d343aa17b28a6c77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "for rds",
            "name_prefix": "",
            "owner_id": "992382512430",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PRD-SG-REDIS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:security-group/sg-0e0922a8b895846ca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0922a8b895846ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "for redis",
            "name_prefix": "",
            "owner_id": "992382512430",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "PRD-SG-BASTION-EGRESS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for all outbound",
            "from_port": 0,
            "id": "sgrule-1251053238",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0372878446f7eb35f",
            "security_group_rule_id": "sgr-0a98a5d046f0a7488",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PRD-SG-BASTION",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "PRD-SG-BASTION-INGRESS-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for ssh",
            "from_port": 22,
            "id": "sgrule-1098961423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0372878446f7eb35f",
            "security_group_rule_id": "sgr-09fcb80de1abf75b7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PRD-SG-BASTION",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "PRD-SG-EFS-MANAGED-SERVER-EGRESS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for all outbound",
            "from_port": 0,
            "id": "sgrule-4141129185",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0073f9536bcc1317b",
            "security_group_rule_id": "sgr-0d8a1ab71e3f311e2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PRD-SG-EFS-MANAGED-SERVER",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "PRD-SG-EFS-MANAGED-SERVER-INGRESS-EFS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for efs",
            "from_port": 2049,
            "id": "sgrule-2036476157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0073f9536bcc1317b",
            "security_group_rule_id": "sgr-0d3a56af282cfc95f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PRD-SG-EFS-MANAGED-SERVER",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "PRD-SG-EFS-MANAGED-SERVER-INGRESS-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for ssh",
            "from_port": 22,
            "id": "sgrule-3271020617",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0073f9536bcc1317b",
            "security_group_rule_id": "sgr-0f25b6603a9c61a47",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PRD-SG-EFS-MANAGED-SERVER",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "PRD-SG-EKS-MANAGED-SERVER-EGRESS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for all outbound",
            "from_port": 0,
            "id": "sgrule-1565306757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d5fb0a61d9a999b7",
            "security_group_rule_id": "sgr-033157553ae8f34dd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PRD-SG-EKS-MANAGED-SERVER",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "PRD-SG-EKS-MANAGED-SERVER-INGRESS-HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for http",
            "from_port": 80,
            "id": "sgrule-3923946863",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5fb0a61d9a999b7",
            "security_group_rule_id": "sgr-0d33e9b3f3fdf57b5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PRD-SG-EKS-MANAGED-SERVER",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "PRD-SG-EKS-MANAGED-SERVER-INGRESS-HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for https",
            "from_port": 443,
            "id": "sgrule-3961594669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5fb0a61d9a999b7",
            "security_group_rule_id": "sgr-078cce316e0fa9ea9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PRD-SG-EKS-MANAGED-SERVER",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "PRD-SG-EKS-MANAGED-SERVER-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all for ssh",
            "from_port": 22,
            "id": "sgrule-1600712922",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5fb0a61d9a999b7",
            "security_group_rule_id": "sgr-00571d7d21e3f1cbd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.PRD-SG-EKS-MANAGED-SERVER",
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRD-PRI-01-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:subnet/subnet-0f577252fceabbe46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f577252fceabbe46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382512430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD-PRI-01-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "PRD-PRI-01-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRD-PRI-01-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:subnet/subnet-0e30d6646ad185373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e30d6646ad185373",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382512430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD-PRI-01-2C",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "PRD-PRI-01-2C",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRD-PRI-02-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:subnet/subnet-00bce4f96b369aff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bce4f96b369aff1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382512430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD-PRI-02-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "PRD-PRI-02-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRD-PRI-02-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:subnet/subnet-085fc0d634b9dfa1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085fc0d634b9dfa1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382512430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD-PRI-02-2C",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "PRD-PRI-02-2C",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRD-PRI-EFS-MANAGED-SERVER-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:subnet/subnet-05d495dcf1b1bb204",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d495dcf1b1bb204",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382512430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD-PRI-EFS-MANAGED-SERVER-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "PRD-PRI-EFS-MANAGED-SERVER-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRD-PRI-EKS-MANAGED-SERVER-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:subnet/subnet-006b535e31d83a7f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006b535e31d83a7f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382512430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD-PRI-EKS-MANAGED-SERVER-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "PRD-PRI-EKS-MANAGED-SERVER-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRD-PRI-EKS-MANAGED-SERVER-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:subnet/subnet-0ccfa065b8a85df1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccfa065b8a85df1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382512430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD-PRI-EKS-MANAGED-SERVER-2C",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "PRD-PRI-EKS-MANAGED-SERVER-2C",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRD-PUB-BASTION-2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:subnet/subnet-01413c72e7596ba53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01413c72e7596ba53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382512430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD-PUB-BASTION-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "PRD-PUB-BASTION-2A",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PRD-PUB-BASTION-2C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:subnet/subnet-0690cf354162ff714",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0690cf354162ff714",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382512430",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD-PUB-BASTION-2C",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "PRD-PUB-BASTION-2C",
              "kubernetes.io/cluster/prd-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-052f9eeb977ae5dcb"
          },
          "dependencies": [
            "aws_vpc.PRD-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "PRD-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:992382512430:vpc/vpc-052f9eeb977ae5dcb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-044be090fa25f39f2",
            "default_route_table_id": "rtb-022f92356227909f7",
            "default_security_group_id": "sg-0a6e89d0daabe4bcc",
            "dhcp_options_id": "dopt-013422ef253d7ddd2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052f9eeb977ae5dcb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022f92356227909f7",
            "owner_id": "992382512430",
            "tags": {
              "Name": "PRD-VPC"
            },
            "tags_all": {
              "Name": "PRD-VPC"
            }
          }
        }
      ]
    }
  ]
}